--- a/src/main/resources/com/rapidminer/extension/resources/i18n/GUIGenerateAttributesPowerPack.properties
+++ b/src/main/resources/com/rapidminer/extension/resources/i18n/GUIGenerateAttributesPowerPack.properties
@@ -10,10 +10,30 @@ gui.dialog.function.text_transformation.abbreviate.parameters = abbreviate(Attri
 gui.dialog.function.text_transformation.abbreviate.help = Abbreviate
 
 
+gui.dialog.function.text_transformation.capitalize.name = capitalize
+gui.dialog.function.text_transformation.capitalize.group = Text Add On
+gui.dialog.function.text_transformation.capitalize.description = Capitalizes a String. \n\nExample: capitalize("americas") \n\n This will turn "americas" into "Americas."
+gui.dialog.function.text_transformation.capitalize.parameters = capitalize(Attribute_value argument)
+gui.dialog.function.text_transformation.capitalize.help = Capitalize
 
 
-text_transformation.capitalize
-text_transformation.chomp
-text_transformation.chop
+gui.dialog.function.text_transformation.chomp.name = chomp
+gui.dialog.function.text_transformation.chomp.group = Text Add On
+gui.dialog.function.text_transformation.chomp.description = Removes one newline from end of a String if it's there, otherwise leave it alone.
+gui.dialog.function.text_transformation.chomp.parameters = chomp(Attribute_value argument)
+gui.dialog.function.text_transformation.chomp.help = Chomp
 
-text_transformation.deletewhitespace
+
+gui.dialog.function.text_transformation.chop.name = chop
+gui.dialog.function.text_transformation.chop.group = Text Add On
+gui.dialog.function.text_transformation.chop.description = Remove the last character from a String. \n\n chop("americas") will return america.
+gui.dialog.function.text_transformation.chop.parameters = chop(Attribute_value argument)
+gui.dialog.function.text_transformation.chop.help = Chop
+
+gui.dialog.function.text_transformation.deletewhitespace.name = deletewhitespace
+gui.dialog.function.text_transformation.deletewhitespace.group = Text Add On
+gui.dialog.function.text_transformation.deletewhitespace.description = Deletes all whitespaces from a String . \n\n deletewhitespace("North America") will return "NorthAmerica".
+gui.dialog.function.text_transformation.deletewhitespace.parameters = deletewhitespace(Attribute_value argument)
+gui.dialog.function.text_transformation.deletewhitespace.help = deletewhitespace
+
+
